# fastapi_viewsets

./: .coverage  LICENSE  README.md  RELEASE_1.1.0.md  RELEASE_1.2.0.md  RELEASE_1.2.1.md  RELEASE_NOTES.md  RELEASE_TEMPLATE.md  TRUSTED_PUBLISHER_SETUP.md  base.db  coverage.xml  pyproject.toml  pytest.ini  setup.py  test.db
.github/workflows/: publish-manual.yml  publish.yml  release.yml  test.yml
fastapi_viewsets/: __init__.py  _compat.py  _register.py  async_base.py  async_utils.py  base.py  constants.py  db_conf.py  utils.py
fastapi_viewsets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapi_viewsets/orm/: __init__.py  base.py  factory.py  peewee_adapter.py  sqlalchemy_adapter.py  tortoise_adapter.py
tests/: __init__.py  conftest.py  test_adapter_methods_coverage.py  test_async_base_viewset.py  test_async_driver_missing.py  test_async_utils.py  test_backward_compatibility.py  test_base_viewset.py  test_coverage_gaps.py  test_db_conf.py  test_db_conf_extended.py  test_edge_cases.py  test_error_handling.py  test_exception_handling.py  test_integration.py  test_missing_coverage.py  test_orm_adapters.py  test_orm_adapters_extended.py  test_utils.py  test_viewsets_with_adapters.py
