[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_viewsets"
version = "1.2.0"
description = "DRF-style viewsets for FastAPI with SQLAlchemy/Tortoise/Peewee adapters and Pydantic v2 support."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Alexander Valenchits" }]
keywords = ["fastapi", "viewsets", "crud", "sqlalchemy", "tortoise", "peewee", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.17.6",
    "SQLAlchemy>=1.4.36",
    "pydantic>=2.5,<3",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
sqlalchemy = ["SQLAlchemy>=1.4.36"]
tortoise = ["tortoise-orm>=0.20.0", "asyncpg>=0.28.0"]
peewee = ["peewee>=3.17.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "faker>=18.0.0",
    "aiosqlite>=0.19.0",
]
lint = ["ruff>=0.5", "black>=24", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/svalench/fastapi_viewsets"
Issues = "https://github.com/svalench/fastapi_viewsets/issues"
Changelog = "https://github.com/svalench/fastapi_viewsets/blob/main/RELEASE_NOTES.md"

[tool.setuptools]
packages = ["fastapi_viewsets", "fastapi_viewsets.orm"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = [
    "PLR0913", # too many arguments — viewsets intentionally take many kwargs
    "PLR0912", # too many branches in register()
    "E501",   # handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "PL"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
no_implicit_optional = true
